--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -1,6 +1,15 @@
-#easy_admin:
-#    entities:
-#        # List the entity class name you want to manage
-#        - App\Entity\Product
-#        - App\Entity\Category
-#        - App\Entity\User
+easy_admin:
+    site_name: 'Ynovagroup'
+    design:
+        brand_color: '#68bc80'
+        assets:
+            css:
+                - 'css/easyadmin.css' 
+    entities:
+        Sociétés:
+            class: App\Entity\Company
+        Documents:
+            class: App\Entity\Files
+        Utilisateurs:
+            class: App\Entity\User
+
