ajout des Utils et passwordController

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -4,3 +4,7 @@
 
 app_logout:
     path: /logout
+
+new_password:
+    path: /mot-de-passe-oublie/{email}
+    controller: App\Controller\PasswordCustomController::newPassword
