commencé dynamisation du front

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -19,6 +19,10 @@ security:
             logout:
                 path:   app_logout
             form_login: true
+            remember_me:
+                secret:   '%kernel.secret%'
+                lifetime: 604800 # 1 week in seconds
+                path:     /
     
             guard:
                 authenticators:
