ajouté commentaire pour Vianney

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -42,7 +42,13 @@ security:
         # - { path: '^\/documents', roles: ROLE_DEVELOPER } 
         # - { path: '^\/articles', roles: ROLE_DEVELOPER } 
         # /vianney je veux bien que tu vérifies si la hiérarchie est bien faite, et bonne. Ensuite, savoir qui a le droit d'accéder à telle ou telle page
+        # pour moi dev est au dessus de admin du coup je le change
+        # developpeur : a accès tout
+        # admin : a accès à tout sauf à easyadmin
+        # business: a accès à tout sauf à la création d'utilisateurs avec un rôle admin ou dev (page pas encore créé)
+        # user: a accès à tout le front + mon profil
+        # anonymous, a accès à tout le front sauf mon profil
     role_hierarchy:
-        ROLE_ADMIN: ROLE_DEVELOPER
-        ROLE_DEVELOPER: ROLE_BUSINESS
+        ROLE_DEVELOPER: ROLE_ADMIN
+        ROLE_ADMIN: ROLE_BUSINESS
         ROLE_BUSINESS: ROLE_USER
