--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -18,7 +18,7 @@ security:
             anonymous: true
             logout:
                 path:   app_logout
-            form_login: true
+
             remember_me:
                 secret:   '%kernel.secret%'
                 lifetime: 604800 # 1 week in seconds
@@ -27,6 +27,11 @@ security:
             guard:
                 authenticators:
                     - App\Security\AppAuthenticator
+
+            
+            form_login: 
+                login_path: /connexion
+                check_path: /connexion
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
@@ -37,9 +42,10 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: '^\/admin', roles: ROLE_DEVELOPER } 
+        - { path: '^\/admin', roles: ROLE_ADMIN } 
+        - { path: '^\/backend', roles: ROLE_BUSINESS } 
+        - { path: '^\/', roles : IS_AUTHENTICATED_ANONYMOUSLY }
         
-        # - { path: '^\/gestionnaires', roles: ROLE_ADMIN } 
         # - { path: '^\/pharmacies', roles: ROLE_ADMIN } 
         # - { path: '^\/documents', roles: ROLE_ADMIN } 
         # - { path: '^\/articles', roles: ROLE_ADMIN } 
