--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "api-platform/api-pack": "^1.2",
         "easycorp/easyadmin-bundle": "^2.1",
         "gedmo/doctrine-extensions": "^2.4",
+        "knplabs/knp-paginator-bundle": "^4.0",
         "sensio/framework-extra-bundle": "^5.1",
         "stof/doctrine-extensions-bundle": "^1.3",
         "symfony/asset": "4.3.*",
