--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,11 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "api-platform/api-pack": "^1.2",
         "doctrine/annotations": "^1.6",
         "easycorp/easyadmin-bundle": "^2.1",
+        "friendsofsymfony/rest-bundle": "^2.5",
         "gedmo/doctrine-extensions": "^2.4",
+        "jms/serializer-bundle": "^3.4",
         "knplabs/knp-paginator-bundle": "^4.0",
         "sensio/framework-extra-bundle": "^5.1",
         "stof/doctrine-extensions-bundle": "^1.3",
