--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -10,7 +10,7 @@ vich_uploader:
             delete_on_update: true
             delete_on_remove: true
 
-        articles_images:
+        article_picture:
             uri_prefix: /images/articles
             upload_destination: '%kernel.project_dir%/public/images/articles'
             namer: Vich\UploaderBundle\Naming\UniqidNamer
