--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -29,7 +29,7 @@ vich_uploader:
         files:
             uri_prefix: /files
             upload_destination: '%kernel.project_dir%/public/files'
-            namer: Vich\UploaderBundle\Naming\UniqidNamer
-            inject_on_load: false
+            namer: Vich\UploaderBundle\Naming\OrignameNamer
+            inject_on_load: true
             delete_on_update: true
             delete_on_remove: true
