ajouté info adherent depuis le dans table des pharmacie + sécurisé route reservées à l admin

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -43,9 +43,14 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: '^\/admin', roles: ROLE_ADMIN } 
+        - { path: '^\/backend/articles', roles: ROLE_ADMIN } 
+        - { path: '^\/backend/commerciaux', roles: ROLE_ADMIN } 
+        - { path: '^\/backend/themes', roles: ROLE_ADMIN } 
+        - { path: '^\/backend/rss', roles: ROLE_ADMIN } 
         - { path: '^\/backend', roles: ROLE_BUSINESS } 
+        - { path: '^\/mon-espace', roles : IS_AUTHENTICATED_REMEMBERED }
         - { path: '^\/', roles : IS_AUTHENTICATED_ANONYMOUSLY }
     role_hierarchy:
         ROLE_DEVELOPER: ROLE_ADMIN
         ROLE_ADMIN: ROLE_BUSINESS
-        ROLE_BUSINESS: ROLE_USER
+        ROLE_BUSINESS: ROLE_MEMBER
