--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -26,6 +26,14 @@ vich_uploader:
             delete_on_update: true
             delete_on_remove: true
 
+        partner_picture:
+            uri_prefix: /images/partners
+            upload_destination: '%kernel.project_dir%/public/images/partners'
+            namer: Vich\UploaderBundle\Naming\UniqidNamer
+            inject_on_load: false
+            delete_on_update: true
+            delete_on_remove: true
+
         files:
             uri_prefix: /files
             upload_destination: '%kernel.project_dir%/public/files'
