--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "gedmo/doctrine-extensions": "^2.4",
         "jms/serializer-bundle": "^3.4",
         "knplabs/knp-paginator-bundle": "^4.0",
+        "lexik/maintenance-bundle": "^2.1",
         "sensio/framework-extra-bundle": "^5.1",
         "stof/doctrine-extensions-bundle": "^1.3",
         "symfony/asset": "4.3.*",
