--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "knplabs/knp-paginator-bundle": "^4.0",
         "lexik/maintenance-bundle": "^2.1",
         "sensio/framework-extra-bundle": "^5.1",
+        "sensiolabs/ansi-to-html": "^1.1",
         "stof/doctrine-extensions-bundle": "^1.3",
         "symfony/asset": "4.3.*",
         "symfony/console": "4.3.*",
