--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -43,7 +43,7 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: '^\/admin', roles: ROLE_ADMIN } 
-        - { path: '^\/backend/(articles|commerciaux|themes|rss|partenaires|configuration)', roles: ROLE_ADMIN } 
+        - { path: '^\/backend/(articles|commerciaux|themes|rss|partenaires|configuration)', roles: ROLE_ADMIN } git
         - { path: '^\/backend', roles: ROLE_BUSINESS } 
         - { path: '^\/api', roles: ROLE_BUSINESS } 
         - { path: '^\/mon-espace', roles : IS_AUTHENTICATED_REMEMBERED }
