--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "symfony/validator": "4.3.*",
         "symfony/web-link": "4.3.*",
         "symfony/yaml": "4.3.*",
+        "twig/extensions": "^1.5",
         "vich/uploader-bundle": "^1.9"
     },
     "require-dev": {
