--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,10 @@
 /public/images/company/
 /public/images/themes/
 /public/files/
+
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
