--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "dependencies": {
         "@ckeditor/ckeditor5-build-classic": "^12.4.0",
         "bs-custom-file-input": "^1.3.2",
-        "datatables.net": "^1.10.19",
+        "datatables.net-bs4": "^1.10.19",
         "select2": "^4.0.10",
         "swup": "^2.0.5"
     }
