--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,6 +1,5 @@
 framework:
     secret: '%env(APP_SECRET)%'
-    #default_locale: en
     #csrf_protection: true
     #http_method_override: true
 
@@ -8,7 +7,7 @@ framework:
     # Remove or comment this section to explicitly disable session support.
     session:
         enabled: true
-        handler_id: ~
+        handler_id: null
         cookie_secure: auto
         cookie_samesite: lax
 
@@ -16,6 +15,5 @@ framework:
     #fragments: true
     php_errors:
         log: true
-
     serializer: 
         { enable_annotations: true }
