--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
         "autoprefixer": "^9.6.1",
         "bootstrap": "^4.3.1",
         "core-js": "^3.0.0",
-        "jquery": "^3.4.1",
         "node-sass": "^4.12.0",
         "popper.js": "^1.15.0",
         "postcss-loader": "^3.0.0",
@@ -31,6 +30,7 @@
         "@ckeditor/ckeditor5-build-classic": "^12.4.0",
         "bs-custom-file-input": "^1.3.2",
         "datatables.net-bs4": "^1.10.19",
+        "jquery": "3.4.1",
         "select2": "^4.0.10",
         "swup": "^2.0.5"
     }
