--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "dependencies": {
         "@ckeditor/ckeditor5-build-classic": "^12.4.0",
         "bs-custom-file-input": "^1.3.2",
+        "datatables.net": "^1.10.20",
+        "datatables.net-bs": "^1.10.20",
         "datatables.net-bs4": "^1.10.19",
         "jquery": "3.4.1",
         "select2": "^4.0.10",
